@@ -15,26 +15,21 @@ import javafx.scene.layout.*;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 import org.controlsfx.control.StatusBar;
-import seng302.Controllers.MedicalHistoryDiseasesController;
-import seng302.Controllers.MedicalHistoryProceduresController;
-import seng302.GUI.TitleBar;
-import seng302.Generic.*;
-import seng302.User.Attribute.AlcoholConsumption;
-import seng302.User.Attribute.BloodType;
-import seng302.User.Attribute.Gender;
-import seng302.User.Attribute.Organ;
-import seng302.User.Attribute.SmokerStatus;
-import seng302.Generic.History;
 import seng302.GUI.StatusIndicator;
+import seng302.GUI.TFScene;
+import seng302.GUI.TitleBar;
+import seng302.Generic.History;
+import seng302.Generic.IO;
+import seng302.Generic.Main;
+import seng302.User.Attribute.*;
+import seng302.User.User;
 
 import java.net.URL;
 import java.time.Duration;
 import java.time.LocalDate;
 import java.util.*;
-import seng302.GUI.TFScene;
-import seng302.User.User;
 
-import static seng302.Generic.Main.streamOut;
+import static seng302.Generic.IO.streamOut;
 
 /**
  * Class which handles all the logic for the User Window.
@@ -77,8 +72,11 @@ public class UserWindowController implements Initializable {
     private TreeTableColumn<String, String> dateTimeColumn, actionColumn;
 
     private HashMap<Organ, CheckBox> organTickBoxes;
-    private ArrayList<User> attributeUndoStack = new ArrayList<>(), attributeRedoStack = new ArrayList<>(), medicationUndoStack = new ArrayList<>(), medicationRedoStack = new ArrayList<>();
+
     private ArrayList<User> waitingListUndoStack = new ArrayList<>(), waitingListRedoStack = new ArrayList<>();
+    private LinkedList<User> attributeUndoStack = new LinkedList<>(), attributeRedoStack = new LinkedList<>(), medicationUndoStack = new LinkedList<>(), medicationRedoStack = new LinkedList<>();
+    private LinkedList<User> procedureUndoStack = new LinkedList<>(), procedureRedoStack = new LinkedList<>();
+    private LinkedList<User> diseaseUndoStack = new LinkedList<>(), diseaseRedoStack = new LinkedList<>();
     private User currentUser;
 
     @FXML
@@ -108,23 +106,13 @@ public class UserWindowController implements Initializable {
         titleBar.setStage(stage);
     }
 
-
-
-    public ArrayList<User> getUserUndoStack() {
-        return attributeUndoStack;
-    }
-
-    public ArrayList<User> getUserRedoStack() {
-        return attributeRedoStack;
-    }
-
     public User getCurrentUser() {
         return currentUser;
     }
 
     public void setCurrentUser(User currentUser) {
         this.currentUser = currentUser;
-        userDisplayText.setText("Currently logged in as: " + currentUser.getName());
+        userDisplayText.setText("Currently logged in as: " + currentUser.getPreferredName());
         attributeUndoStack.clear();
         attributeRedoStack.clear();
         undoButton.setDisable(true);
@@ -132,16 +120,7 @@ public class UserWindowController implements Initializable {
         redoButton.setDisable(true);
         redoBannerButton.setDisable(true);
         bloodPressureLabel.setText("");
-        titleBar.setTitle(currentUser.getName(), "User", "Home");
-    }
-
-    /**
-     * Adds a user object to the user undo stack. This is called whenever a user saves any changes in the GUI.
-     *
-     * @param user user object being added to the top of the stack.
-     */
-    public void addUserToUndoStack(User user) {
-        attributeUndoStack.add(new User(user));
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Home");
     }
 
     /**
@@ -174,8 +153,6 @@ public class UserWindowController implements Initializable {
         organTickBoxes.put(Organ.TISSUE, connectiveTissueCheckBox);
         organTickBoxes.put(Organ.LUNG, lungCheckBox);
 
-        Main.medicalHistoryDiseasesViewForDonor();
-        Main.medicalHistoryProceduresViewForDonor();
         Main.controlViewForUser();
 
         Image welcomeImage = new Image("/OrganDonation.jpg");
@@ -256,10 +233,11 @@ public class UserWindowController implements Initializable {
     public void attributeFieldUnfocused() {
         User oldFields = new User(currentUser);
         if (updateUser() && !currentUser.fieldsEqual(oldFields)) {
-            addUserToUndoStack(oldFields);
+            attributeUndoStack.add(new User(oldFields));
             attributeRedoStack.clear();
             setUndoRedoButtonsDisabled(false, true);
             titleBar.saved(false);
+            statusIndicator.setStatus("Edited user details", false);
         }
     }
 
@@ -269,6 +247,21 @@ public class UserWindowController implements Initializable {
     public void addCurrentToMedicationUndoStack() {
         medicationUndoStack.add(new User(currentUser));
         medicationRedoStack.clear();
+        setUndoRedoButtonsDisabled(false, true);
+    }
+
+    public void addCurrentToDiseaseUndoStack() {
+        diseaseUndoStack.add(new User(currentUser));
+        diseaseRedoStack.clear();
+        setUndoRedoButtonsDisabled(false, true);
+    }
+
+    /**
+     * Add the current user object to the procedures undo stack.
+     */
+    public void addCurrentToProceduresUndoStack() {
+        procedureUndoStack.add(new User(currentUser));
+        procedureRedoStack.clear();
         setUndoRedoButtonsDisabled(false, true);
     }
 
@@ -310,7 +303,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(true, true);
-        titleBar.setTitle(currentUser.getName(), "User", "Action History");
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Action History");
     }
 
 
@@ -324,7 +317,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(true);
         setUndoRedoButtonsDisabled(waitingListUndoStack.isEmpty(), waitingListRedoStack.isEmpty());
-        titleBar.setTitle(currentUser.getName(), "User", "Waiting List");
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Waiting List");
     }
 
     /**
@@ -339,7 +332,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(true);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(medicationUndoStack.isEmpty(), medicationRedoStack.isEmpty());
-        titleBar.setTitle(currentUser.getName(), "User", "Medications");
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Medications");
     }
 
     /**
@@ -353,6 +346,7 @@ public class UserWindowController implements Initializable {
         medicalHistoryProceduresPane.setVisible(false);
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Attributes");
     }
 
     /**
@@ -367,6 +361,8 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), attributeRedoStack.isEmpty());
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Disease History");
+        setUndoRedoButtonsDisabled(diseaseUndoStack.isEmpty(), diseaseRedoStack.isEmpty());
     }
 
     /**
@@ -381,7 +377,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), attributeRedoStack.isEmpty());
-        titleBar.setTitle(currentUser.getName(), "User", "Attributes");
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Procedure History");
     }
 
     /**
@@ -396,7 +392,7 @@ public class UserWindowController implements Initializable {
         medicationsPane.setVisible(false);
         waitingListPane.setVisible(false);
         setUndoRedoButtonsDisabled(true, true);
-        titleBar.setTitle(currentUser.getName(), "User", "Home");
+        titleBar.setTitle(currentUser.getPreferredName(), "User", "Home");
     }
 
     /**
@@ -405,7 +401,7 @@ public class UserWindowController implements Initializable {
      * Sorts these into tree nodes based on new sessions.
      */
     public void populateHistoryTable() {
-        userHistoryLabel.setText("History of actions for " + currentUser.getName());
+        userHistoryLabel.setText("History of actions for " + currentUser.getPreferredName());
         String[][] userHistory = History.getUserHistory(currentUser.getId());
         ArrayList<TreeItem<String>> treeItems = new ArrayList<>();
         if(userHistory[0][0] != null) {
@@ -470,11 +466,7 @@ public class UserWindowController implements Initializable {
                 new ReadOnlyStringWrapper(p.getValue().getValue()));
 
         actionColumn.setCellValueFactory(param -> {
-            String userName = currentUser.getName(), toCheck = param.getValue().getValue().substring(0, 12);
-            if(!toCheck.substring(0,7).equals("Session")){
-                //System.out.println("toCheck: "+toCheck);
-
-            }
+            String userName = currentUser.getPreferredName(), toCheck = param.getValue().getValue().substring(0, 12);
             if (toCheck.equals("Update Account")) {
                 return new ReadOnlyStringWrapper("Updated account settings for user " + userName + ".");
             }
@@ -527,8 +519,8 @@ public class UserWindowController implements Initializable {
      * takes all their attributes and populates the user attributes on the attributes pane accordingly.
      */
     public void populateUserFields() {
-        settingAttributesLabel.setText("Attributes for " + currentUser.getName());
-        String[] splitNames = currentUser.getNameArray();
+        settingAttributesLabel.setText("Attributes for " + currentUser.getPreferredName());
+        String[] splitNames = currentUser.getPreferredNameArray();
         firstNameField.setText(splitNames[0]);
         if (splitNames.length > 2) {
             String[] middleName = new String[splitNames.length - 2];
@@ -551,7 +543,7 @@ public class UserWindowController implements Initializable {
 
         bloodPressureTextField.setText(currentUser.getBloodPressure());
 
-        genderComboBox.setValue(currentUser.getGender());
+        genderComboBox.setValue(currentUser.getGenderIdentity());
         bloodTypeComboBox.setValue(currentUser.getBloodType());
         smokerStatusComboBox.setValue(currentUser.getSmokerStatus());
         alcoholConsumptionComboBox.setValue(currentUser.getAlcoholConsumption());
@@ -640,13 +632,18 @@ public class UserWindowController implements Initializable {
         }
 
         //Commit changes
-        currentUser.setNameArray(name);
+        currentUser.setPreferredNameArray(name);
         currentUser.setHeight(userHeight);
         currentUser.setWeight(userWeight);
         currentUser.setBloodPressure(userBloodPressure);
         currentUser.setDateOfBirth(dateOfBirthPicker.getValue());
         currentUser.setDateOfDeath(dateOfDeathPicker.getValue());
-        currentUser.setGender(genderComboBox.getValue());
+        if (currentUser.getGender() == null) {
+            currentUser.setGender(genderComboBox.getValue());
+            currentUser.setGenderIdentity(genderComboBox.getValue());
+        } else {
+            currentUser.setGenderIdentity(genderComboBox.getValue());
+        }
         currentUser.setBloodType(bloodTypeComboBox.getValue());
         currentUser.setAlcoholConsumption(alcoholConsumptionComboBox.getValue());
         currentUser.setSmokerStatus(smokerStatusComboBox.getValue());
@@ -663,11 +660,10 @@ public class UserWindowController implements Initializable {
                 }
             }
         }
-
-        settingAttributesLabel.setText("Attributes for " + currentUser.getName());
-        userDisplayText.setText("Currently logged in as: " + currentUser.getName());
+        settingAttributesLabel.setText("Attributes for " + currentUser.getPreferredName());
+        userDisplayText.setText("Currently logged in as: " + currentUser.getPreferredName());
         System.out.println(currentUser.toString());
-        Main.getClinicianController().updateUserTable();
+        //Main.getClinicianController().updateUserTable();
         return true;
     }
 
@@ -681,12 +677,14 @@ public class UserWindowController implements Initializable {
             "Are you sure would like to update the current user? ", "By doing so, the user will be updated with all filled in fields.");
         Optional<ButtonType> result = alert.showAndWait();
         if (result.get() == ButtonType.OK && updateUser()) {
-            Main.saveUsers(Main.getUserPath(), true);
+            IO.saveUsers(IO.getUserPath(), true);
             populateUserFields();
             String text = History.prepareFileStringGUI(currentUser.getId(), "update");
             History.printToFile(streamOut, text);
             populateHistoryTable();
             titleBar.saved(true);
+            titleBar.setTitle(currentUser.getPreferredName(),"User");
+            statusIndicator.setStatus("Saved", false);
         }
         alert.close();
     }
@@ -702,9 +700,9 @@ public class UserWindowController implements Initializable {
             //Add the current fields to the redo stack
             attributeRedoStack.add(new User(currentUser));
             //Copy the attribute information from the top element of the undo stack
-            currentUser.copyFieldsFrom(attributeUndoStack.get(attributeUndoStack.size() - 1));
+            currentUser.copyFieldsFrom(attributeUndoStack.getLast());
             //Remove the top element of the undo stack
-            attributeUndoStack.remove(attributeUndoStack.size() - 1);
+            attributeUndoStack.removeLast();
             populateUserFields();
 
             setUndoRedoButtonsDisabled(attributeUndoStack.isEmpty(), false);
@@ -715,9 +713,9 @@ public class UserWindowController implements Initializable {
             //Add the current medication lists to the redo stack
             medicationRedoStack.add(new User(currentUser));
             //Copy the medication lists from the top element of the undo stack
-            currentUser.copyMedicationListsFrom(medicationUndoStack.get(medicationUndoStack.size() - 1));
+            currentUser.copyMedicationListsFrom(medicationUndoStack.getLast());
             //Remove the top element of the undo stack
-            medicationUndoStack.remove(medicationUndoStack.size() - 1);
+            medicationUndoStack.removeLast();
 
             setUndoRedoButtonsDisabled(medicationUndoStack.isEmpty(), false);
             Main.updateMedications();
@@ -727,7 +725,29 @@ public class UserWindowController implements Initializable {
             waitingListUndoStack.remove(waitingListUndoStack.size()-1);
             setUndoRedoButtonsDisabled(waitingListUndoStack.isEmpty(), false);
             Main.updateWaitingList();
+        } else if (medicalHistoryProceduresPane.isVisible()) {
+            //Add the current procedures lists to the redo stack
+            procedureRedoStack.add(new User(currentUser));
+            //Copy the proceudres lists from the top element of the undo stack
+            currentUser.copyProceduresListsFrom(procedureUndoStack.get(procedureUndoStack.size() - 1));
+            //Remove the top element of the undo stack
+            procedureUndoStack.remove(procedureUndoStack.size() - 1);
+
+            setUndoRedoButtonsDisabled(procedureUndoStack.isEmpty(), false);
+            Main.updateProcedures();
+        } else if (medicalHistoryDiseasesPane.isVisible()) {
+            //Add the current disease lists to the redo stack
+            diseaseRedoStack.add(new User(currentUser));
+            //Copy the disease lists from the top element of the undo stack
+            currentUser.copyDiseaseListsFrom(diseaseUndoStack.get(diseaseUndoStack.size() - 1));
+            //Remove the top element of the undo stack
+            diseaseUndoStack.remove(diseaseUndoStack.size() - 1);
+
+            setUndoRedoButtonsDisabled(diseaseUndoStack.isEmpty(), false);
+            Main.updateDiseases();
         }
+        statusIndicator.setStatus("Undid last action", false);
+        titleBar.saved(false);
     }
 
     /**
@@ -738,11 +758,11 @@ public class UserWindowController implements Initializable {
         if (attributesGridPane.isVisible()) {
             attributeFieldUnfocused();
             //Add the current fields to the undo stack
-            addUserToUndoStack(currentUser);
+            attributeUndoStack.add(new User(currentUser));
             //Copy the attribute information from the top element of the redo stack
-            currentUser.copyFieldsFrom(attributeRedoStack.get(attributeRedoStack.size() - 1));
+            currentUser.copyFieldsFrom(attributeRedoStack.getLast());
             //Remove the top element of the redo stack
-            attributeRedoStack.remove(attributeRedoStack.size() - 1);
+            attributeRedoStack.removeLast();
             populateUserFields();
 
             setUndoRedoButtonsDisabled(false, attributeRedoStack.isEmpty());
@@ -753,9 +773,9 @@ public class UserWindowController implements Initializable {
             //Add the current medication lists to the undo stack
             medicationUndoStack.add(new User(currentUser));
             //Copy the medications lists from the top element of the redo stack
-            currentUser.copyMedicationListsFrom(medicationRedoStack.get(medicationRedoStack.size() - 1));
+            currentUser.copyMedicationListsFrom(medicationRedoStack.getLast());
             //Remove the top element of the redo stack
-            medicationRedoStack.remove(medicationRedoStack.size() - 1);
+            medicationRedoStack.removeLast();
 
             setUndoRedoButtonsDisabled(false, medicationRedoStack.isEmpty());
             Main.updateMedications();
@@ -765,7 +785,28 @@ public class UserWindowController implements Initializable {
             waitingListRedoStack.remove(waitingListRedoStack.size() - 1);
             setUndoRedoButtonsDisabled(false, waitingListRedoStack.isEmpty());
             Main.updateWaitingList();
+        } else if (medicalHistoryProceduresPane.isVisible()) {
+            //Add the current procedures lists to the redo stack
+            procedureUndoStack.add(new User(currentUser));
+            //Copy the proceudres lists from the top element of the undo stack
+            currentUser.copyProceduresListsFrom(procedureRedoStack.get(procedureRedoStack.size() - 1));
+            //Remove the top element of the undo stack
+            procedureRedoStack.remove(procedureRedoStack.size() - 1);
+
+            setUndoRedoButtonsDisabled(false, procedureRedoStack.isEmpty());
+            Main.updateProcedures();
+        } else if (medicalHistoryDiseasesPane.isVisible()) {
+            //Add the current disease lists to the redo stack
+            diseaseUndoStack.add(new User(currentUser));
+            //Copy the disease lists from the top element of the undo stack
+            currentUser.copyDiseaseListsFrom(diseaseRedoStack.get(diseaseRedoStack.size() - 1));
+            //Remove the top element of the undo stack
+            diseaseRedoStack.remove(diseaseRedoStack.size() - 1);
+
+            setUndoRedoButtonsDisabled(false, medicationRedoStack.isEmpty());
+            Main.updateDiseases();
         }
+        statusIndicator.setStatus("Redid last action", false);
         titleBar.saved(false);
     }
 
@@ -858,7 +899,6 @@ public class UserWindowController implements Initializable {
                     Main.setAccountSettingsEnterEvent();
                     stage.showAndWait();
                 } catch (Exception e) {
-                    System.out.println("here");
                     e.printStackTrace();
                 }
             }else{ // Password incorrect
@@ -897,6 +937,7 @@ public class UserWindowController implements Initializable {
     public void stop() {
         Alert alert = Main.createAlert(AlertType.CONFIRMATION, "Are you sure?",
             "Are you sure would like to exit the window? ", "Exiting without saving loses your non-saved data.");
+        alert.getDialogPane().lookupButton(ButtonType.OK).setId("exitOK");
         Optional<ButtonType> result = alert.showAndWait();
         if (result.get() == ButtonType.OK) {
             System.out.println("Exiting GUI");
